--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-dom": "^18.2.4"
+    "@types/react-dom": "^18.2.4",
+    "@types/three": "^0.152.1"
   }
 }
