--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "keywords": [],
   "main": "src/index.tsx",
   "dependencies": {
+    "@react-three/drei": "^9.74.8",
     "@react-three/fiber": "8.10.4",
+    "r3f-perf": "^7.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "5.0.1",
